k8s/tls/wellness-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wellness-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wellness.127.0.0.1.nip.io
      secretName: wellness-tls
  rules:
    - host: wellness.127.0.0.1.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
